# anylabeling

./: .gitignore  CODING_AGENT_TASKS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PRE_LOADING_IMPLEMENTATION.md  IMAGE_FILTER_FEATURE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  PR_SUMMARY.md  README.md  TESTING_IMAGE_FILTER.md  requirements-gpu.txt  requirements-macos.txt  requirements.txt  setup.py  start_anylabeling.bat
anylabeling/: config.py
anylabeling/configs/: anylabeling_config.yaml  performance.yaml
anylabeling/extensions/: README.md  __init__.py  fallbacks.py  fast_nms.pyx  fast_transforms.pyx  polygon_ops.pyx  setup_extensions.py
anylabeling/rust_extensions/: Cargo.toml  README.md  __init__.py  fallback.py  pyproject.toml
anylabeling/rust_extensions/src/: directory_scanner.rs  image_loader.rs  lib.rs  mmap_reader.rs
anylabeling/services/auto_labeling/: model.py  model_manager.py  yolov11.py  yolov5.py  yolov8.py
anylabeling/utils/: __init__.py  generic_worker.py  image_cache.py  parallel.py  performance.py
anylabeling/views/labeling/: label_widget.py  shape.py
benchmarks/: README.md  benchmark_filtering.py  benchmark_inference.py  benchmark_io.py  benchmark_nms.py  run_benchmarks.py
docs/: building_extensions.md  direct_pt_loading.md  performance_guide.md
scripts/: run_anylabeling.bat  run_anylabeling.sh
tests/: test_extensions.py  test_filter_dialog.py  test_performance.py  test_preloading.py  test_thread_safety.py  test_toggle_background.py
(+6 files in other folders)
